add palette in gh-pages v.2

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="left">
             <img src="palette/assets/img/Shape.png" alt="menu">
             <p>CodeJam Palette</p></div>
-        <div class="right">
-            <img src="palette/assets/img/Shap.png" alt="menu">
+        <div class="right"> 
+            <img src="palette/assets/img/Shap.png" alt="menu"> 
         </div>
     </header>
     <main>
@@ -30,24 +30,31 @@
                 <div><div class="prev color-top" id="prev"></div> Prev color</div>
                 <hr>
                 <div>
-                    <div class="grey color" id="grey" onclick="click_grey()"></div>
-                    <div class="red color" id="red" onclick="click_red()"></div>
-                    <div class="green color" id="green" onclick="click_green()"></div>
-                    <div class="blue color" id="blue" onclick="click_blue()"></div>
+                    <div class="gray color" id="gray"></div>
+                    <div class="red color" id="red"></div>
+                    <div class="green color" id="green"></div>
+                    <div class="blue color" id="blue"></div>
                 </div>
             </div>
         </div>
+        
         <div class="right-block">
-            <div class="canvas">
-                <div class="one" id="one" onclick="click_one()"></div>
-                <div class="two" id="two" onclick="click_two()"></div>
-                <div class="tree" id="tree" onclick="click_tree()"></div>
-                <div class="four" id="four" onclick="click_four()"></div>
-                <div class="five" id="five" onclick="click_five()"></div>
-                <div class="six" id="six" onclick="click_six()"></div>
-                <div class="seven" id="seven" onclick="click_seven()"></div>
-                <div class="eight" id="eight" onclick="click_eight()"></div>
-                <div class="nine" id="nine" onclick="click_nine()"></div>
+            <div class="canvas" id="canvas">
+                <div>
+                    <div class="block one" id="one"></div>
+                    <div class="block two" id="two"></div>
+                    <div class="block tree" id="tree"></div>
+                </div>
+                <div>
+                    <div class="block four" id="four"></div>
+                    <div class="block five" id="five"></div>
+                    <div class="block six" id="six"></div>
+                </div>
+                <div>
+                    <div class="block seven" id="seven"></div>
+                    <div class="block eight" id="eight"></div>
+                    <div class="block nine" id="nine"></div>
+                </div>
             </div>
         </div>
     </main>
